--- a/showings.css
+++ b/showings.css
@@ -1,13 +1,12 @@
-
-.projects {
+.showings {
     padding: 50px 0;
   }
-
-  h2{
+  
+  h2 {
     text-align: center;
   }
   
-  .projects .container {
+  .showings .container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
